--- a/styless/style.css
+++ b/styless/style.css
@@ -233,14 +233,13 @@ nav{
     background-color: rgba(26, 11, 46, 1);
     /* gap: 120px; */
 }
-.featured-container{
-    padding-bottom: 120px;
-}
+
 .featured-heading{
     font-size: 3rem;
     font-weight: 700;
     color: #ffffff;
     text-align: center;
+    margin-bottom: 40px;
 }
 .episodes-container{
     display: grid;
@@ -249,21 +248,18 @@ nav{
 }
 .episodes-cards{
     /* border: 1px solid saddlebrown; */
-    max-width: 380px;
-    height: 440px;
-    /* background-color: rgba(37, 13, 68, 1) ; */
+    width: 380px;
+    border-radius: 20px;
+    background-color: rgba(37, 13, 68, 1) ;
+    overflow: hidden;
 }
 .episodes-cards .video{
-    width: 380px;
-    height: 260px;
+    width: 100%;
+    height: aut0;
     
 }
 .card-container{
-    /* border: 1px solid white; */
     padding: 1.5rem;
-    background-color: rgba(37, 13, 68, 1);
-    border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
 }
 .episodes-cards h4{
     font-size: 1.5rem;
@@ -313,6 +309,14 @@ nav{
     display: flex;
     align-items: center;
     gap: 16px;
+    
+}
+.alex-logo img{
+    background: linear-gradient(45deg,#f7e93f 0%,#fb09b4 51%,#9100f8 100%);
+    border-radius: 50%;
+    background: transparent;
+    border: 1px solid #b90ad4;
+    padding: 10px;
 }
   /* padding: 12px 20px;
     color: #00FF88;
@@ -321,4 +325,67 @@ nav{
     border-radius: 30px;
     cursor: pointer;
     transition: 0.3s; */
+
+    /* footer realeted style */
+    .footer{
+        background-image: url(../assets/footer-bg.png);
+        position: relative;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        margin: 0 auto;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 120px;
+    }
+    .footer-container h1{
+        position: relative;
+        z-index: 2;
+        font-size: 3rem;
+        font-weight: 800;
+        color: #ffffff;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 2rem;
+        /* transform: translateY(10px); */
+    }
+    .footer-text{
+        background: linear-gradient(45deg,#f7e93f 0%,#fb09b4 51%,#9100f8 100%);
+        color: transparent;
+        background-clip: text;
+
+    }
+    .footer-card{
+        display: flex;
+        gap: 60px;
+        justify-content: center;
+        align-items: center;
+    }
+    .card-conten{
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 2rem;
+    }
+    .card-conten p{
+        font-size: 1rem;
+        font-weight: 500;
+        opacity: 60%;
+        color: #ffffff;
+    }
+    .footer-texts{
+        font-size: 1rem;
+        opacity: 60%;
+        color: rgba(250, 250, 250, 1);
+        line-height: 1.5rem;
+        text-align: center;
+    }
+
+
 
