--- a/styless/style.css
+++ b/styless/style.css
@@ -318,14 +318,6 @@ nav{
     border: 1px solid #b90ad4;
     padding: 10px;
 }
-  /* padding: 12px 20px;
-    color: #00FF88;
-    border: 1px solid #00ff88;
-    background: transparent;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: 0.3s; */
-
     /* footer realeted style */
     .footer{
         background-image: url(../assets/footer-bg.png);
@@ -385,6 +377,33 @@ nav{
         color: rgba(250, 250, 250, 1);
         line-height: 1.5rem;
         text-align: center;
+    }
+    .display-none{
+        display: none;
+    }
+    .nav-container .hamburger{
+        display: none;
+    }
+    @media screen and (max-width:576px) {
+        .nav-container {
+            margin: 0;
+            justify-content: space-between;
+            width: 100%;
+        }
+        .nav-links,.btns{
+            display: none;
+        }
+        .nav-container .hamburger{
+        display: flex;
+        }
+        /* section-banner */
+        .badge {
+            left: 320px;
+        }
+        .mike{
+            left: 38%;
+            top: 90px;
+        }
     }
 
 
