added card video

--- a/styless/style.css
+++ b/styless/style.css
@@ -410,7 +410,7 @@ nav{
         .nav-links,.btns{
             display: none;
         }
-        .nav-container .hamburger{
+        .display-none{
         display: flex;
         }
         /* section-banner */
